# iron-doom

./: .gitignore  Cargo.toml  LICENSE.md  PLAN.md  README.md
docs/: boom.txt
id_core/: Cargo.toml  build.rs
id_core/src/: animation_state_map.rs  cvars.rs  lib.rs  sector_accel.rs  world.rs
id_core/src/components/: mod.rs  sector.rs  texture.rs  thing.rs  wall.rs
id_core/src/entities/: mod.rs  player.rs  sector.rs  thing.rs  wall.rs
id_core/src/helpers/: camera.rs  changed_field.rs  changed_set.rs  mod.rs  stopwatch.rs
id_core/src/helpers/geom/: mod.rs
id_core/src/helpers/geom/algorithms/: minimum_cycle_basis.rs  mod.rs  point_in_polygon.rs
id_core/src/helpers/geom/structs/: bounds2d.rs  graph2d.rs  mod.rs  polygon2d.rs  polygon_shape2d.rs  triangles2d.rs
id_core/src/renderer/: debug_window.rs  main_user_context.rs  main_window.rs  mod.rs
id_core/src/renderer/data/: mod.rs  palette_colormap_data.rs  palette_image_data.rs  sector_data.rs  thing_data.rs  wall_data.rs
id_core/src/renderer/helpers/: egui_system_platform.rs  mod.rs  movement_controller.rs  system.rs
id_core/src/renderer/helpers/egui/: egui_system_platform.rs  egui_user_context.rs  egui_window.rs  mod.rs
id_core/src/renderer/helpers/gpu/: gpu_buffer.rs  gpu_frame_texture.rs  gpu_u8_buffer.rs  mod.rs
id_core/src/renderer/helpers/window/: egui_user_context.rs  egui_window.rs  mod.rs  overlay_window.rs  window_runner.rs  window_sequence.rs
id_core/src/renderer/shaders/: sector.slang  sector.wgsl  wall.slang  wall.wgsl
id_core/src/renderer/shaders/include/: helpers.slang  helpers.wgsl  image.wgsl  sky.slang  sky.wgsl  uniforms.slang  uniforms.wgsl  utils.wgsl
id_game_config/: Cargo.toml  README.md
id_game_config/config/: chex.json  doom.json  heretic.json
id_game_config/src/: lib.rs
id_map_format/: Cargo.toml  README.md
id_map_format/src/: helpers.rs  lib.rs
id_map_format/src/lumps/: colormaps.rs  maps.rs  mod.rs  palettes.rs  patches.rs  textures.rs
id_viewer/: Cargo.toml
id_viewer/src/: main.rs  sdl2_system.rs
id_viewer_web/: Cargo.toml  index.html
id_viewer_web/src/: lib.rs  winit_system.rs
