[package]
name = "id-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
id-core = { version = "0.1.0", path = "../id_core" }
id-map-format = { version = "0.1.0", path = "../id_map_format" }

sdl2 = { version = "0.38.0", features = ["raw-window-handle", "bundled"] }
keycode = { workspace = true }

ultraviolet = { workspace = true }
pollster = "0.3.0"
